--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   firebase_auth: ^4.6.3
   cloud_firestore: ^4.8.2
   google_nav_bar: ^5.0.6
+  google_sign_in: ^6.1.4
 
 dev_dependencies:
   flutter_test:
