--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   cloud_firestore: ^4.8.2
   google_nav_bar: ^5.0.6
   google_sign_in: ^6.1.4
+  dio: ^5.2.1+1
 
 dev_dependencies:
   flutter_test:
