--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   google_nav_bar: ^5.0.6
   google_sign_in: ^6.1.4
   dio: ^5.2.1+1
+  google_maps_flutter: ^2.0.1
 
 dev_dependencies:
   flutter_test:
